update file names